pufff este lab... hasta el challenge 3

--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "pokemon = pd.read_csv('Pokemon.csv')\n",
     "# Importing the dataset from Ironhack's database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>405</td>\n",
+       "      <td>58</td>\n",
+       "      <td>64</td>\n",
+       "      <td>58</td>\n",
+       "      <td>80</td>\n",
+       "      <td>65</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Charizard</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>534</td>\n",
+       "      <td>78</td>\n",
+       "      <td>84</td>\n",
+       "      <td>78</td>\n",
+       "      <td>109</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>CharizardMega Charizard X</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>634</td>\n",
+       "      <td>78</td>\n",
+       "      <td>130</td>\n",
+       "      <td>111</td>\n",
+       "      <td>130</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6</td>\n",
+       "      <td>CharizardMega Charizard Y</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>634</td>\n",
+       "      <td>78</td>\n",
+       "      <td>104</td>\n",
+       "      <td>78</td>\n",
+       "      <td>159</td>\n",
+       "      <td>115</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>314</td>\n",
+       "      <td>44</td>\n",
+       "      <td>48</td>\n",
+       "      <td>65</td>\n",
+       "      <td>50</td>\n",
+       "      <td>64</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                       Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1                  Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                    Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3                   Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3      VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4                 Charmander   Fire     NaN    309  39      52       43   \n",
+       "5  5                 Charmeleon   Fire     NaN    405  58      64       58   \n",
+       "6  6                  Charizard   Fire  Flying    534  78      84       78   \n",
+       "7  6  CharizardMega Charizard X   Fire  Dragon    634  78     130      111   \n",
+       "8  6  CharizardMega Charizard Y   Fire  Flying    634  78     104       78   \n",
+       "9  7                   Squirtle  Water     NaN    314  44      48       65   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  \n",
+       "5       80       65     80           1      False  \n",
+       "6      109       85    100           1      False  \n",
+       "7      130       85    100           1      False  \n",
+       "8      159      115    100           1      False  \n",
+       "9       50       64     43           1      False  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.head(10)"
    ]
   },
   {
@@ -77,11 +319,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3        False\n",
+       "4        False\n",
+       "5        False\n",
+       "6        False\n",
+       "7        False\n",
+       "8        False\n",
+       "9        False\n",
+       "10       False\n",
+       "11       False\n",
+       "12       False\n",
+       "13       False\n",
+       "14       False\n",
+       "15       False\n",
+       "16       False\n",
+       "17       False\n",
+       "18       False\n",
+       "19       False\n",
+       "20       False\n",
+       "21       False\n",
+       "22       False\n",
+       "23       False\n",
+       "24       False\n",
+       "25       False\n",
+       "26       False\n",
+       "27       False\n",
+       "28       False\n",
+       "29       False\n",
+       "         ...  \n",
+       "772      False\n",
+       "773      False\n",
+       "774      False\n",
+       "775      False\n",
+       "776      False\n",
+       "777      False\n",
+       "778      False\n",
+       "779      False\n",
+       "780      False\n",
+       "781      False\n",
+       "782      False\n",
+       "783      False\n",
+       "784      False\n",
+       "785      False\n",
+       "786      False\n",
+       "787      False\n",
+       "788      False\n",
+       "789      False\n",
+       "790      False\n",
+       "791      False\n",
+       "792      False\n",
+       "793      False\n",
+       "794      False\n",
+       "795      False\n",
+       "796      False\n",
+       "797      False\n",
+       "798      False\n",
+       "799      False\n",
+       "Total    False\n",
+       "TOTAL    False\n",
+       "Length: 802, dtype: bool"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "pokemon['TOTAL']==pokemon['HP']+ pokemon['Attack'] + pokemon['Defense']+ pokemon['Sp. Atk']+ pokemon['Sp. Def']+ pokemon['Speed']\n"
    ]
   },
   {
@@ -119,11 +435,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bug</th>\n",
+       "      <th>Dark</th>\n",
+       "      <th>Dragon</th>\n",
+       "      <th>Electric</th>\n",
+       "      <th>Fairy</th>\n",
+       "      <th>Fighting</th>\n",
+       "      <th>Fire</th>\n",
+       "      <th>Flying</th>\n",
+       "      <th>Ghost</th>\n",
+       "      <th>Grass</th>\n",
+       "      <th>Ground</th>\n",
+       "      <th>Ice</th>\n",
+       "      <th>Normal</th>\n",
+       "      <th>Poison</th>\n",
+       "      <th>Psychic</th>\n",
+       "      <th>Rock</th>\n",
+       "      <th>Steel</th>\n",
+       "      <th>Water</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Bug  Dark  Dragon  Electric  Fairy  Fighting  Fire  Flying  Ghost  Grass  \\\n",
+       "0    0     0       0         0      0         0     0       0      0      1   \n",
+       "1    0     0       0         0      0         0     0       0      0      1   \n",
+       "2    0     0       0         0      0         0     0       0      0      1   \n",
+       "3    0     0       0         0      0         0     0       0      0      1   \n",
+       "4    0     0       0         0      0         0     1       0      0      0   \n",
+       "\n",
+       "   Ground  Ice  Normal  Poison  Psychic  Rock  Steel  Water  \n",
+       "0       0    0       0       1        0     0      0      0  \n",
+       "1       0    0       0       1        0     0      0      0  \n",
+       "2       0    0       0       1        0     0      0      0  \n",
+       "3       0    0       0       1        0     0      0      0  \n",
+       "4       0    0       0       0        0     0      0      0  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "TOTAL=pd.get_dummies(pokemon['Type 1'])+pd.get_dummies(pokemon['Type 2'])\n",
+    "TOTAL.head()"
    ]
   },
   {
@@ -145,10 +635,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total       1.000000\n",
+       "Dragon      0.229705\n",
+       "Psychic     0.124688\n",
+       "Steel       0.109703\n",
+       "Fire        0.078726\n",
+       "Fighting    0.077786\n",
+       "Ice         0.060248\n",
+       "Flying      0.059383\n",
+       "Dark        0.056154\n",
+       "Rock        0.032731\n",
+       "Electric    0.020971\n",
+       "Ground      0.015060\n",
+       "Ghost       0.003641\n",
+       "Water      -0.021665\n",
+       "Fairy      -0.036698\n",
+       "Grass      -0.052592\n",
+       "Poison     -0.090441\n",
+       "Normal     -0.105331\n",
+       "Bug        -0.145781\n",
+       "Name: Total, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "TOTAL['Total']= pokemon['Total']\n",
+    "TOTAL.head()\n",
+    "TOTAL.corr()['Total'].sort_values(ascending=False)\n",
+    "\n",
     "# your code here"
    ]
   },
@@ -187,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
