--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
@@ -1007,9 +1007,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Normal             61\n",
+       "Water              59\n",
+       "Psychic            38\n",
+       "Grass              33\n",
+       "Fire               28\n",
+       "Electric           27\n",
+       "Normal-Flying      24\n",
+       "Fighting           20\n",
+       "Bug                17\n",
+       "Poison             15\n",
+       "Grass-Poison       15\n",
+       "Fairy              15\n",
+       "Bug-Flying         14\n",
+       "Ice                13\n",
+       "Ground             13\n",
+       "Bug-Poison         12\n",
+       "Dragon             11\n",
+       "Water-Ground       10\n",
+       "Dark               10\n",
+       "Ghost-Grass        10\n",
+       "Ghost              10\n",
+       "Rock                9\n",
+       "Bug-Steel           7\n",
+       "Steel-Psychic       7\n",
+       "Water-Flying        7\n",
+       "Fire-Fighting       7\n",
+       "Fire-Flying         6\n",
+       "Bug-Grass           6\n",
+       "Psychic-Flying      6\n",
+       "Rock-Water          6\n",
+       "                   ..\n",
+       "Psychic-Ghost       1\n",
+       "Fire-Dragon         1\n",
+       "Water-Steel         1\n",
+       "Fighting-Flying     1\n",
+       "Ground-Fire         1\n",
+       "Fire-Steel          1\n",
+       "Poison-Dragon       1\n",
+       "Bug-Ghost           1\n",
+       "Poison-Bug          1\n",
+       "Grass-Dragon        1\n",
+       "Steel-Dragon        1\n",
+       "Electric-Dragon     1\n",
+       "Dragon-Fairy        1\n",
+       "Normal-Water        1\n",
+       "Rock-Fighting       1\n",
+       "Electric-Grass      1\n",
+       "Electric-Fairy      1\n",
+       "Electric-Ice        1\n",
+       "Electric-Fire       1\n",
+       "Dragon-Fire         1\n",
+       "Steel-Flying        1\n",
+       "Ghost-Dark          1\n",
+       "Electric-Water      1\n",
+       "Grass-Ground        1\n",
+       "Normal-Ground       1\n",
+       "Ground-Electric     1\n",
+       "Electric-Ghost      1\n",
+       "Psychic-Grass       1\n",
+       "Fire-Water          1\n",
+       "Fire-Rock           1\n",
+       "Name: Combo Type, Length: 154, dtype: int64"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code here\n",
     "#pd.crosstab(pokemon['Make'],df[\"Year\"])[[2008,2009,2010]]\n",
@@ -1023,7 +1095,9 @@
     "\n",
     "pokemon[\"Combo Type\"] = pokemon[\"Type 1\"] + \"-\" + pokemon[\"Type 2\"]\n",
     "\n",
-    "pokemon[\"Combo Type\"] = pokemon[\"Combo Type\"].fillna(pokemon[\"Type 1\"])\n"
+    "pokemon[\"Combo Type\"] = pokemon[\"Combo Type\"].fillna(pokemon[\"Type 1\"])\n",
+    "\n",
+    "pokemon[\"Combo Type\"].value_counts()"
    ]
   },
   {
