--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0           0     536365    85123A  2010     12    3     8   \n",
+       "1           1     536365     71053  2010     12    3     8   \n",
+       "2           2     536365    84406B  2010     12    3     8   \n",
+       "3           3     536365    84029G  2010     12    3     8   \n",
+       "4           4     536365    84029E  2010     12    3     8   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  \n",
+       "0       2.55       17850  United Kingdom         15.30  \n",
+       "1       3.39       17850  United Kingdom         20.34  \n",
+       "2       2.75       17850  United Kingdom         22.00  \n",
+       "3       3.39       17850  United Kingdom         20.34  \n",
+       "4       3.39       17850  United Kingdom         20.34  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "orders = pd.read_csv('Orders.csv', engine='python')\n",
+    "display(orders.head())"
    ]
   },
   {
@@ -81,11 +236,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14646</th>\n",
+       "      <td>544561120</td>\n",
+       "      <td>1163267611</td>\n",
+       "      <td>4182810</td>\n",
+       "      <td>14191</td>\n",
+       "      <td>6552</td>\n",
+       "      <td>24488</td>\n",
+       "      <td>197491</td>\n",
+       "      <td>5176.09</td>\n",
+       "      <td>280206.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18102</th>\n",
+       "      <td>138022684</td>\n",
+       "      <td>243297801</td>\n",
+       "      <td>866723</td>\n",
+       "      <td>3746</td>\n",
+       "      <td>1261</td>\n",
+       "      <td>5587</td>\n",
+       "      <td>64124</td>\n",
+       "      <td>1940.92</td>\n",
+       "      <td>259657.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17450</th>\n",
+       "      <td>92683919</td>\n",
+       "      <td>188845149</td>\n",
+       "      <td>677704</td>\n",
+       "      <td>2292</td>\n",
+       "      <td>842</td>\n",
+       "      <td>4140</td>\n",
+       "      <td>69993</td>\n",
+       "      <td>1143.32</td>\n",
+       "      <td>194550.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16446</th>\n",
+       "      <td>929130</td>\n",
+       "      <td>1688629</td>\n",
+       "      <td>6033</td>\n",
+       "      <td>22</td>\n",
+       "      <td>11</td>\n",
+       "      <td>27</td>\n",
+       "      <td>80997</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>168472.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14911</th>\n",
+       "      <td>1737367680</td>\n",
+       "      <td>3196374868</td>\n",
+       "      <td>11416155</td>\n",
+       "      <td>46220</td>\n",
+       "      <td>18930</td>\n",
+       "      <td>68148</td>\n",
+       "      <td>80515</td>\n",
+       "      <td>26185.72</td>\n",
+       "      <td>143825.06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Unnamed: 0   InvoiceNo      year  month    day   hour  Quantity  \\\n",
+       "CustomerID                                                                    \n",
+       "14646        544561120  1163267611   4182810  14191   6552  24488    197491   \n",
+       "18102        138022684   243297801    866723   3746   1261   5587     64124   \n",
+       "17450         92683919   188845149    677704   2292    842   4140     69993   \n",
+       "16446           929130     1688629      6033     22     11     27     80997   \n",
+       "14911       1737367680  3196374868  11416155  46220  18930  68148     80515   \n",
+       "\n",
+       "            UnitPrice  amount_spent  \n",
+       "CustomerID                           \n",
+       "14646         5176.09     280206.02  \n",
+       "18102         1940.92     259657.30  \n",
+       "17450         1143.32     194550.79  \n",
+       "16446            4.98     168472.50  \n",
+       "14911        26185.72     143825.06  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5840.181999999983"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "#Group by customerID and sum all the values. Order by the amount_spent.\n",
+    "aggregate = orders.groupby(['CustomerID']).agg('sum').sort_values('amount_spent', ascending = False)\n",
+    "display(aggregate.head())\n",
+    "\n",
+    "#The first group is VIP Customers whose aggregated expenses at your global chain stores are above the 95th percentile. \n",
+    "#The second group is Preferred Customers whose aggregated expenses are between the 75th and 95th percentile.\n",
+    "\n",
+    "\n",
+    "VIP = aggregate['amount_spent'].quantile(q=0.95)\n",
+    "display(VIP)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Preferred = aggregate['amount_spent'].quantile(q=0.75)\n",
+    "#display (Preferred)"
    ]
   },
   {
@@ -139,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
