Creando carpeta images

--- a/module-1/pandas-project/your-code/pandas-project.ipynb
+++ b/module-1/pandas-project/your-code/pandas-project.ipynb
@@ -20,7 +20,7 @@
     "<br/>\n",
     "\n",
     "\n",
-    "![Baby shark](baby-shark.gif)\n",
+    "![Baby shark](./images/baby-shark.gif)\n",
     "\n",
     "## Cargando el dataset\n",
     "\n",
