--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
@@ -1845,145 +1845,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>#</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
-       "      <th>A/D Ratio</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Combo Type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Bug-Poison</th>\n",
-       "      <td>199.166667</td>\n",
-       "      <td>347.916667</td>\n",
-       "      <td>53.750000</td>\n",
-       "      <td>68.333333</td>\n",
-       "      <td>58.083333</td>\n",
-       "      <td>42.500000</td>\n",
-       "      <td>59.333333</td>\n",
-       "      <td>65.916667</td>\n",
-       "      <td>2.333333</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.315989</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Psychic</th>\n",
-       "      <td>381.973684</td>\n",
-       "      <td>464.552632</td>\n",
-       "      <td>72.552632</td>\n",
-       "      <td>64.947368</td>\n",
-       "      <td>67.236842</td>\n",
-       "      <td>98.552632</td>\n",
-       "      <td>82.394737</td>\n",
-       "      <td>78.868421</td>\n",
-       "      <td>3.342105</td>\n",
-       "      <td>0.236842</td>\n",
-       "      <td>1.164196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rock</th>\n",
-       "      <td>410.111111</td>\n",
-       "      <td>409.444444</td>\n",
-       "      <td>67.111111</td>\n",
-       "      <td>103.333333</td>\n",
-       "      <td>107.222222</td>\n",
-       "      <td>40.555556</td>\n",
-       "      <td>58.333333</td>\n",
-       "      <td>32.888889</td>\n",
-       "      <td>3.888889</td>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>1.260091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Water-Dark</th>\n",
-       "      <td>347.666667</td>\n",
-       "      <td>493.833333</td>\n",
-       "      <td>69.166667</td>\n",
-       "      <td>120.000000</td>\n",
-       "      <td>65.166667</td>\n",
-       "      <td>88.833333</td>\n",
-       "      <td>63.500000</td>\n",
-       "      <td>87.166667</td>\n",
-       "      <td>3.166667</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.291949</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     #       Total         HP      Attack     Defense  \\\n",
-       "Combo Type                                                              \n",
-       "Bug-Poison  199.166667  347.916667  53.750000   68.333333   58.083333   \n",
-       "Psychic     381.973684  464.552632  72.552632   64.947368   67.236842   \n",
-       "Rock        410.111111  409.444444  67.111111  103.333333  107.222222   \n",
-       "Water-Dark  347.666667  493.833333  69.166667  120.000000   65.166667   \n",
-       "\n",
-       "              Sp. Atk    Sp. Def      Speed  Generation  Legendary  A/D Ratio  \n",
-       "Combo Type                                                                     \n",
-       "Bug-Poison  42.500000  59.333333  65.916667    2.333333   0.000000   1.315989  \n",
-       "Psychic     98.552632  82.394737  78.868421    3.342105   0.236842   1.164196  \n",
-       "Rock        40.555556  58.333333  32.888889    3.888889   0.111111   1.260091  \n",
-       "Water-Dark  88.833333  63.500000  87.166667    3.166667   0.000000   2.291949  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your code here\n",
     "\n",
     "pokemon = pokemon[pokemon[\"Combo Type\"].isin(top[\"Combo Type\"])]\n",
     "pokemon.groupby(\"Combo Type\").agg(\"mean\")\n",
-    "\n",
+    "pokemon\n",
     "#pokemon._get_numeric_data()"
    ]
   },
@@ -1992,7 +1862,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(3)"
+   ]
   },
   {
    "cell_type": "code",
